// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid flex布局 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="xl-grid-flex xl-grid-flex--top"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid-flex xl-grid-flex--middle"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid-flex xl-grid-flex--bottom"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid-flex xl-grid-flex--start"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid-flex xl-grid-flex--center"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid-flex xl-grid-flex--end"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid-flex"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-order-3 xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-order-1 xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-order-2 xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid 偏移布局 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="xl-grid"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-offset-6 xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-push-6 xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-pull-6 xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-offset-6 xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-pull-12 xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid 响应式偏移 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="xl-grid"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-offset-6 xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid 响应式布局 1`] = `
<div
  class="box"
>
  <div
    class="xl-grid"
  >
    <div
      class="xl-col"
    >
      <div
        class="col"
      >
        col1
      </div>
    </div>
    <div
      class="xl-col"
    >
      <div
        class="col"
      >
        col2
      </div>
    </div>
    <div
      class="xl-col"
    >
      <div
        class="col"
      >
        col3
      </div>
    </div>
    <div
      class="xl-col"
    >
      <div
        class="col"
      >
        col4
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid 基本用法 1`] = `
<div>
  <div
    class="box"
  >
    <div
      class="xl-grid"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-4"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-5"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-7"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-8"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="box"
  >
    <div
      class="xl-grid"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-8"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-0"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-8"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-8"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="col"
        >
          col4
        </div>
      </div>
    </div>
  </div>
</div>
`;
